# music_streamer_back

./: .gitignore  manage.py  pyproject.toml
middlewares/: jwt_middleware.py
music_lib/: admin.py  api_views.py  apps.py  filters.py  models.py  serializers.py  urls.py
music_lib/migrations/: 0001_initial.py  0002_playlist.py  0003_playlist_cover.py  0004_artist_thumbnail.py  0005_artist_avatar.py  0006_song_duration_song_play_count_playevent.py  0007_alter_song_duration.py
music_lib/templates/music_lib/: song_detail.html
music_streamer/: asgi.py  settings.py  urls.py  wsgi.py
music_streamer/settings/: __init__.py  common.py  production.py
templates/: base.html
users/: models.py  views.py
users/migrations/: 0001_initial.py  0002_user_liked_songs.py  0003_alter_user_liked_songs.py
